# todo-list-app-tutorial

./: gdb.sh  meson.build
.flatpak/: vala-language-server.sh
.flatpak/flatpak-builder/cache/refs/heads/x86_64-var_2Fhome_2Fnahuelwexd_2FProyectos_2Ftodo-list-app-tutorial_2Fbuild-aux_2Fcom.nahuelwexd.TodoListAppTutorial.json/: init
.flatpak/flatpak-builder/checksums/: x86_64-com.nahuelwexd.TodoListAppTutorial.json
build-aux/: com.nahuelwexd.TodoListAppTutorial.json
data/: com.nahuelwexd.TodoListAppTutorial.desktop  meson.build
src/: Application.vala  MainWindow.ui  MainWindow.vala  Task.vala  TaskRepository.vala  TaskRow.ui  TaskViewModel.vala  meson.build  style.css  todo-list-app-tutorial-ui-resources.xml
